--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.115.14",
     "openai>=1.93.0",
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
+    "uvicorn>=0.35.0",
 ]
