--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "openai>=1.93.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "python-multipart>=0.0.20",
     "uvicorn>=0.35.0",
 ]
