--- a/env.example
+++ b/env.example
@@ -2,6 +2,11 @@
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_ORGANIZATION=your_openai_organization_id_here
 
+# Volcengine (DouBao) Configuration
+VOLCENGINE_APP_ID=your_volcengine_app_id_here
+VOLCENGINE_ACCESS_TOKEN=your_volcengine_access_token_here
+VOLCENGINE_RESOURCE_ID=volc.bigasr.auc_turbo
+
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
