--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ dependencies = [
     "aiofiles>=24.1.0",
     "dotenv>=0.9.9",
     "fastapi>=0.115.14",
+    "httpx>=0.28.1",
     "openai>=1.93.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "python-multipart>=0.0.20",
+    "requests>=2.32.4",
     "uvicorn>=0.35.0",
 ]
