--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai>=1.93.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "pytest>=8.4.1",
     "python-multipart>=0.0.20",
     "requests>=2.32.4",
     "uvicorn>=0.35.0",
