--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.115.14",
     "httpx>=0.28.1",
     "openai>=1.93.0",
+    "openai-agents>=0.1.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "pytest>=8.4.1",
