--- a/env.example
+++ b/env.example
@@ -14,7 +14,7 @@ DEBUG=false
 
 # File Upload Configuration
 MAX_FILE_SIZE=26214400  # 25MB in bytes
-ALLOWED_AUDIO_EXTENSIONS=[".mp3", ".mp4", ".mpeg", ".mpga", ".m4a", ".wav", ".webm"]
+ALLOWED_AUDIO_EXTENSIONS=[".mp3", ".mp4", ".mpeg", ".mpga", ".m4a", ".wav", ".webm", ".opus"]
 
 # Whisper Configuration
 DEFAULT_WHISPER_MODEL=whisper-1
@@ -22,4 +22,10 @@ DEFAULT_LANGUAGE=
 DEFAULT_RESPONSE_FORMAT=verbose_json
 
 # Temporary file storage
-TEMP_DIR=./temp 
+TEMP_DIR=./temp
+
+# Audio Acceleration Configuration
+ENABLE_AUDIO_ACCELERATION=true
+AUDIO_ACCELERATION_FACTOR=1.5
+AUDIO_MIN_SEGMENT_DURATION_FOR_ACCELERATION=1.0
+AUDIO_MAX_ACCELERATION_FACTOR=3.0 
