--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "httpx>=0.28.1",
     "librosa>=0.10.1",
     "numpy>=1.24.0",
-    "onnxruntime>=1.22.0",
     "openai>=1.93.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
@@ -19,5 +18,7 @@ dependencies = [
     "pytest>=8.4.1",
     "python-multipart>=0.0.20",
     "requests>=2.32.4",
+    "silero-vad>=5.1.2",
+    "torch>=2.0.0",
     "uvicorn>=0.35.0",
 ]
